rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax15/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default final void m() { 
			
		} 
	}
}